# thesis-Registration

./: CMakeLists.txt  CudaLibrary_kernels.cu  CudaProjection.cu  CudaProjection.h  IntensityBased.cpp  IntensityBased.h  MechanicalProperties.cpp  MechanicalProperties.h  Metrics.cpp  Metrics.h  NiftySimEjecutable.cpp  NiftySimEjecutable.h  RegularGrid.cpp  RegularGrid.h  SegundoRegistro.vcxproj  SegundoRegistro.vcxproj.filters  SimulatedAnnealing.cpp  SimulatedAnnealing.h  Source.cpp  Transformations.cpp  Transformations.h  auxiliarDefinitions.h  auxiliarFunctions_Transformations - copia.cpp  auxiliarFunctions_Transformations.h  auxiliarHeaders.h  auxiliarRegistrationParameters.h  mammogram.cpp  mammogram.h  xml.cpp  xml.h  xmlModelWriter.cpp  xmlModelWriter.h
